# arkmask

./: .gitignore  AGENTS.md
.github/workflows/: api.yml  flutter.yml  infra.yml  workers.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_jobs_table.py
backend/app/: config.py  database.py  dependencies.py  firestore_paths.py  main.py
backend/app/models/: db.py  user.py
backend/app/routers/: account.py  auth.py  billing.py  generation.py  projects.py
backend/app/schemas/: auth.py  billing.py  generation.py
backend/app/services/: asset_manage.py  asset_ref.py  asset_writer.py  cloud_tasks.py  ffmpeg_merge.py  firebase.py  media_store.py  scene_assets.py  scene_progress.py
backend/app/services/ai/: base.py  byteplus.py  gemini.py
backend/instructions/: asset-list-generation.md  image-description-generation.md  image-prompt-generation.md  image-variant-generation.md  refine-story-generation.md  video-prompt-generation.md
backend/scripts/: migrate_asset_refs.py  setup_stripe_products.py
backend/tests/: test_asset_manage.py  test_asset_ref.py  test_auth.py  test_ffmpeg_merge.py  test_scene_assets.py  test_scene_progress.py
infra/: SETUP.md
infra/firebase/: firestore.indexes.json  firestore.rules
mobile/: .env.example.json  .gitignore  README.md  analysis_options.yaml  firebase.json  pubspec.yaml
mobile/android/: build.gradle.kts
mobile/lib/: app.dart  firebase_options.dart  (+1 more)
workers/: Dockerfile
(+115 files in other folders)
