[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arkmask-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi==0.138.1",
    "uvicorn[standard]==0.34.3",
    "python-multipart==0.0.32",

    # Auth / secrets
    "firebase-admin==7.4.0",

    # Configuration
    "pydantic==2.13.4",
    "pydantic-settings==2.9.1",
    "pydantic[email]",

    # AI providers (ported from solid-work prototype)
    "google-genai==2.10.0",
    # BytePlus Ark SDK: pip install byteplus-python-sdk-v2
    "byteplus-python-sdk-v2",
    # sniffio is a transitive dep of byteplus-python-sdk-v2 not declared by that package
    "sniffio",

    # Object storage (GCS / MinIO)
    "boto3==1.38.39",

    # Cloud Tasks — dispatches async image/video/merge jobs to the workers service
    "google-cloud-tasks==2.23.0",

    # HTTP client for downloading AI-generated media
    "httpx==0.28.1",

    # Billing
    "stripe==12.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio==0.26.0",
    "httpx==0.28.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
